--- a/app/src/main/res/layout/fragment_open_note.xml
+++ b/app/src/main/res/layout/fragment_open_note.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.CreateNoteFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.OpenNoteFragment"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/linear"
@@ -29,13 +29,13 @@
             android:textSize="25sp" />
 
         <ImageView
-            android:id="@+id/deleteBtn"
+            android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/delete"
+            android:layout_marginHorizontal="15dp"
+            android:src="@drawable/save"
+            android:visibility="gone"
             app:tint="@color/white" />
 
         <ImageView
@@ -44,18 +44,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
+            android:visibility="gone"
             android:src="@drawable/select_color"
             app:tint="@color/white" />
 
         <ImageView
-            android:id="@+id/saveBtn"
+            android:id="@+id/deleteBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="15dp"
-            android:src="@drawable/save"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/delete"
             app:tint="@color/white" />
-
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -72,6 +73,7 @@
         <EditText
             android:id="@+id/titeText"
             style="@style/myText"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
@@ -82,6 +84,36 @@
             android:textColorHint="#3C618F" />
 
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="end"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Last modifield    "
+            android:textSize="11sp"
+            android:fontFamily="serif"
+            style="@style/myText"
+            />
+
+        <TextView
+            android:id="@+id/timeTV"
+            android:text="12:45 12.02.2023"
+            android:textSize="11sp"
+            style="@style/myText"
+            android:fontFamily="serif"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -111,5 +143,6 @@
 
 
     </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
