--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_homeFragment_to_createNoteFragment"
             app:destination="@id/createNoteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_openNoteFragment"
+            app:destination="@id/openNoteFragment" />
     </fragment>
     <fragment
         android:id="@+id/createNoteFragment"
@@ -35,5 +38,14 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/openNoteFragment"
+        android:name="com.javohirbekcoder.mynote.fragments.OpenNoteFragment"
+        android:label="fragment_open_note"
+        tools:layout="@layout/fragment_open_note" >
+        <action
+            android:id="@+id/action_openNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
