--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,7 +12,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
     <style name="CardView.BackgroudColor">
-        <item name="android:backgroundTint">#999999</item>
+        <item name="android:backgroundTint">#262C32</item>
     </style>
     <style name="myText">
         <item name="android:textColor">#fff</item>
