--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
+            android:visibility="gone"
             android:layout_marginEnd="20dp"
             android:src="@drawable/delete"
             app:tint="@color/white" />
