--- a/app/src/main/res/layout/fragment_open_note.xml
+++ b/app/src/main/res/layout/fragment_open_note.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.OpenNoteFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".fragments.OpenNoteFragment">
 
     <LinearLayout
         android:id="@+id/linear"
@@ -29,6 +29,26 @@
             android:textSize="25sp" />
 
         <ImageView
+            android:id="@+id/deleteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/delete"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/selectColorBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:src="@drawable/select_color"
+            android:visibility="gone"
+            app:tint="@color/white" />
+
+        <ImageView
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,25 +58,6 @@
             android:visibility="gone"
             app:tint="@color/white" />
 
-        <ImageView
-            android:id="@+id/selectColorBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="10dp"
-            android:visibility="gone"
-            android:src="@drawable/select_color"
-            app:tint="@color/white" />
-
-        <ImageView
-            android:id="@+id/deleteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/delete"
-            app:tint="@color/white" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -73,7 +74,6 @@
         <EditText
             android:id="@+id/titeText"
             style="@style/myText"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
@@ -81,38 +81,37 @@
             android:fontFamily="@font/delius"
             android:hint="Your title"
             android:maxLines="1"
-            android:textColorHint="#3C618F" />
+            android:textColorHint="#3C618F"
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:gravity="end"
-        >
+        android:orientation="horizontal">
+
         <TextView
+            style="@style/myText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Last modified on "
-            android:textSize="11sp"
             android:fontFamily="serif"
-            style="@style/myText"
-            />
+            android:text="Last modified on "
+            android:textSize="11sp" />
 
         <TextView
             android:id="@+id/timeTV"
-            android:layout_marginStart="8dp"
-            android:text="12:45 12.02.2023"
-            android:textSize="11sp"
             style="@style/myText"
-            android:fontFamily="serif"
-            android:layout_gravity="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:layout_gravity="end"
+            android:layout_marginStart="8dp"
+            android:fontFamily="serif"
+            android:text="12:45 12.02.2023"
+            android:textSize="11sp" />
     </LinearLayout>
 
 
@@ -126,17 +125,17 @@
         app:cardCornerRadius="10dp">
 
         <ScrollView
+            android:id="@+id/myScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
-            android:id="@+id/myScrollView"
             android:scrollbars="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <EditText
                     android:id="@+id/noteText"
                     style="@style/myText"
