--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
             <EditText
                 android:id="@+id/searchText"
                 style="@style/myText"
+                android:enabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="10dp"
@@ -186,7 +187,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,14 +195,15 @@
 
         <ImageView
             android:id="@+id/empty_list_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/empty_list"
-            app:tint="@color/white" />
+            app:tint="#DD3543"
+            android:contentDescription="" />
 
         <TextView
             android:id="@+id/empty_list_text"
-            style="@style/myText"
+            android:textColor="#DD3543"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="serif"
